# serverless-rust-example

./: Cargo.toml  package.json  serverless.yml
.github/workflows/: rust.yml
