[package]
name = "serverless-rust-example"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["macros"] }
serde_json = "^1"
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", version = "0.2.0-beta.1"}
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
